WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
170326
Mail can get stuck underneath FindController::findStringMatches after searching in a long message
https://bugs.webkit.org/show_bug.cgi?id=170326
Summary
Mail can get stuck underneath FindController::findStringMatches after searchi...
Tim Horton
Reported
2017-03-30 23:19:38 PDT
Mail can get stuck underneath FindController::findStringMatches after searching in a long message
Attachments
Patch
(3.95 KB, patch)
2017-03-30 23:19 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2017-03-30 23:19:56 PDT
Created
attachment 305945
[details]
Patch
Tim Horton
Comment 2
2017-03-30 23:20:25 PDT
<
rdar://problem/30330395
>
WebKit Commit Bot
Comment 3
2017-03-31 12:56:34 PDT
Comment on
attachment 305945
[details]
Patch Clearing flags on attachment: 305945 Committed
r214683
: <
http://trac.webkit.org/changeset/214683
>
WebKit Commit Bot
Comment 4
2017-03-31 12:56:35 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug