Mail can get stuck underneath FindController::findStringMatches after searching in a long message https://bugs.webkit.org/show_bug.cgi?id=170326 <rdar://problem/30330395>

Reviewed by Simon Fraser.

Source/WebKit2:

* UIProcess/mac/WKTextFinderClient.mm:
(-[WKTextFinderClient findMatchesForString:relativeToMatch:findOptions:maxResults:resultCollector:]):
Cap the number of find matches at 1000, the same maximum that Safari uses.

Tools:

* TestWebKitAPI/Tests/WebKit2Cocoa/FindInPage.mm:
(TEST):


Canonical link: https://commits.webkit.org/187267@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@214683 268f45cc-cd09-0410-ab3c-d52691b4dbfc